finished landing page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+    
     <title>Nemanja Kraljic</title>
 </head>
 
@@ -19,10 +20,10 @@
 
         <!-----NAV------>
 
-        <nav class="navbar navbar-dark bg-dark navbar-expend-md fixed-top">
+        <nav class="navbar navbar-expand-md fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand">TLP</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-targer="#menu">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
                <span class="navbar-toggler-icon"></span>
            </button>
                 <div class="collapse navbar-collapse" id="menu">
@@ -53,16 +54,16 @@
             <div class="home-wrap">
                 <div class="home-inner">
 
+</div>
 
                 </div>
+
+
+            <div class="caption center-block text-center">
+                <h2>Nemanja Kraljic</h2>
+                <p>Softwer developer</p>
             </div>
-        </div>
-
-        <div class="caption center-block text-center">
-            <h2>Nemanja Kraljic</h2>
-            <p>Softwer developer</p>
-        </div>
-
+        
     </div>
 
     <!------about------->
