--- a/index.html
+++ b/index.html
@@ -13,8 +13,98 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbarResponsive">
+    <section id="banner">
+        <div class="container">
+            <div class="row max-viewport align-items-center text-center">
+                <div class="col-md-6 ">
+                    <h1 class="text-white text-uppercase">Nemanja Kraljic</h1>
+                    <h3 class="text-white">-Software developer-</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-----about me----->
+    <section id="about-me" class="py-5 bg-secondary">
+        <div class="container">
+            <div class="row align-items-center text-center text-white">
+                <div class="col-sm-12 col-md-6 col-lg-4text-white my-3 d-flex">
+                    <i class="fa fa-wrench fa-5x mr-3 align-self-center"></i>
+                    <div class="inner-text">
+                        <h1 class="my-3">Who am I?</h1>
+                        <p class="lead">adshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa
+                            dsaopd pksado ndsposad n</p>
 
-  
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4text-white my-3 d-flex">
+                    <i class="fa fa-refresh fa-5x mr-3 align-self-center"></i>
+                    <div class="inner-text">
+                        <h1 class="my-3">Who am I?</h1>
+                        <p class="lead">adshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa
+                            dsaopd pksado ndsposad n</p>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+    <!-----skills---->
+    <section id="skills" class="p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="box">
+                            <div class="percent">
+                                <svg>
+                          <circle cx="70" cy="70" r="70"></circle>
+                          <circle cx="70" cy="70" r="70"></circle>
+                      </svg>
+                                <div class="number">
+                                    <h2>90<span>%</span></h2>
+                                </div>
+                            </div>
+                            <h2 class="text">HTML</h2>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-sm-4">
+                    <div class="card">
+                        <div class="box">
+                            <div class="percent">
+                                <svg>
+                          <circle cx="70" cy="70" r="70"></circle>
+                          <circle cx="70" cy="70" r="70"></circle>
+                      </svg>
+                                <div class="number">
+                                    <h2>90<span>%</span></h2>
+                                </div>
+                            </div>
+                            <h2 class="text">HTML</h2>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-sm-4">
+                    <div class="card">
+                        <div class="box">
+                            <div class="percent">
+                                <svg>
+                          <circle cx="70" cy="70" r="70"></circle>
+                          <circle cx="70" cy="70" r="70"></circle>
+                      </svg>
+                                <div class="number">
+                                    <h2>90<span>%</span></h2>
+                                </div>
+                            </div>
+                            <h2 class="text">HTML</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-----Script---->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
