--- a/index.html
+++ b/index.html
@@ -52,58 +52,43 @@
     </section>
     <!-----skills---->
     <section id="skills" class="p-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card">
-                        <div class="box">
-                            <div class="percent">
-                                <svg>
-                          <circle cx="70" cy="70" r="70"></circle>
-                          <circle cx="70" cy="70" r="70"></circle>
-                      </svg>
-                                <div class="number">
-                                    <h2>90<span>%</span></h2>
-                                </div>
-                            </div>
-                            <h2 class="text">HTML</h2>
-                        </div>
-                    </div>
+       <div class="naslov">
+    <h1 class="mb-5 mt-5"> My Software skills</h1>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h3 class="progress-title">HTML</h3>
+            <div class="progress">
+                <div class="progress-bar" style="width:78%; background:#97c513;">
+                    <div class="progress-value">65%</div>
                 </div>
-                 <div class="col-sm-4">
-                    <div class="card">
-                        <div class="box">
-                            <div class="percent">
-                                <svg>
-                          <circle cx="70" cy="70" r="70"></circle>
-                          <circle cx="70" cy="70" r="70"></circle>
-                      </svg>
-                                <div class="number">
-                                    <h2>90<span>%</span></h2>
-                                </div>
-                            </div>
-                            <h2 class="text">HTML</h2>
-                        </div>
-                    </div>
+            </div>
+            <h3 class="progress-title">CSS</h3>
+            <div class="progress">
+                <div class="progress-bar" style="width:60%; background:#f2545b;">
+                    <div class="progress-value">100%</div>
                 </div>
-                 <div class="col-sm-4">
-                    <div class="card">
-                        <div class="box">
-                            <div class="percent">
-                                <svg>
-                          <circle cx="70" cy="70" r="70"></circle>
-                          <circle cx="70" cy="70" r="70"></circle>
-                      </svg>
-                                <div class="number">
-                                    <h2>90<span>%</span></h2>
-                                </div>
-                            </div>
-                            <h2 class="text">HTML</h2>
-                        </div>
-                    </div>
+            </div>
+            <h3 class="progress-title">JAVASCRIPT</h3>
+            <div class="progress">
+                <div class="progress-bar" style="width:20%; background:#4286f4;">
+                    <div class="progress-value">75%</div>
+                </div>
+            </div>
+            <h3 class="progress-title">BOOTSTRAP</h3>
+            <div class="progress">
+                <div class="progress-bar" style="width:60%; background:#21ff63;">
+                    <div class="progress-value">30%</div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+    </section>
+    
+    <section id="projects">
+      
     </section>
     <!-----Script---->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
