--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6 my-3">
-              <img src="assets/images/success.jpg" alt="#" class="img-fluid rounded" alt="picture">
+              <img src="assets/images/office.jpg" alt="#" class="img-fluid rounded" alt="picture">
             <h1 class="my-3">Project One</h1>
             <p class="text-muted">This is my first ever project, my first website, hope you like it!</p>
           </div>
           <div class="col-sm-6 my-3">
-              <img src="assets/images/industry.jpg" alt="#" class="img-fluid rounded" alt="picture">
+              <img src="assets/images/under-construction.jpg" alt="#" class="img-fluid rounded" alt="picture">
             <h1 class="my-3">Project 2</h1>
             <p class="text-muted">...coming soon.</p>
           </div>
           <div class="col-sm-6 my-3">
-              <img src="assets/images/success.jpg" alt="#" class="img-fluid rounded" alt="picture">
+              <img src="assets/images/under-construction.jpg" alt="#" class="img-fluid rounded" alt="picture">
             <h1 class="my-3">Project #</h1>
             <p class="text-muted">...coming soon.</p>
           </div>
           <div class="col-sm-6 my-3">
-              <img src="assets/images/success.jpg" alt="#" class="img-fluid rounded" alt="picture">
+              <img src="assets/images/under-construction.jpg" alt="#" class="img-fluid rounded" alt="picture">
             <h1 class="my-3">Project 4</h1>
             <p class="text-muted">...coming soon.</p>
           </div>
@@ -114,6 +114,47 @@
          
         </div>
       </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+        <div class="row justify justify-content-center">
+            <div class="col-11 col-md-8 col-lg-6 col-xl-5">
+                <form class="">
+                    <div class="card bg-transparent">
+                        <div class="row mt-0">
+                            <div class="col-md-12 ">
+                                <h4 class="">Contact Me</h4>
+                                <p>Feel free to contact me if you have any projects or job for me.</p>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <div class="col-md-12 mb-0">
+                                <p class="mb-1">Email</p> <input id="e-mail" type="text" placeholder="Enter your email" name="email" class="form-control input-box rm-border">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-md-12 mb-2">
+                                <p class="mb-1">Message</p> <textarea id="message" type="text" placeholder="Enter your message" name="message" class="form-control input-box rm-border"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group row justify-content-center mb-0">
+                            <div class="col-md-12 px-3"> <input type="submit" value="Submit" class="btn btn-block btn-dark rm-border"> </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    </section>
+    <section id="footer" class="p-2 bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h4 class="text-white text-capiralize">&copy;Copyright Kraljic 2019</h4>
+                </div>
+            </div>
+        </div>
+        
     </section>
     <!-----Script---->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
