i need to sleep

--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
     <section id="projects" class="p-5 bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 my-3">
-                    <img src="assets/images/success.jpg" alt="#" class="img-fluid rounded" alt="picture">
+                <div class="col-sm-6 my-3" >
+                  <a class="project-link" href="#banner">  <img src="assets/images/office.jpg" alt="#" class="img-fluid rounded" alt="picture">
                     <h1 class="my-3">Project One</h1>
                     <p class="text-muted">This is my first ever project, my first website, hope you like it!</p>
+               </a>
                 </div>
                 <div class="col-sm-6 my-3">
                     <img src="assets/images/under-construction.jpg" alt="#" class="img-fluid rounded" alt="picture">
