--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                     <i class="fa fa-wrench fa-5x mr-3 align-self-center"></i>
                     <div class="inner-text">
                         <h1 class="my-3">Who am I?</h1>
-                        <p class="lead">adshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa
-                            dsaopd pksado ndsposad n</p>
+                        <p class="lead">I am currently student at Code Institute. Always had a love to coding but after high school simply went on anothere side, mechanical engineering. Few years later after facultry i have realised that coding is my thing.  </p>
 
                     </div>
                 </div>
@@ -70,8 +69,7 @@
                     <i class="fa fa-refresh fa-5x mr-3 align-self-center"></i>
                     <div class="inner-text">
                         <h1 class="my-3">Who am I?</h1>
-                        <p class="lead">adshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa dsaopd pksado ndsposadadshfah sadsa
-                            dsaopd pksado ndsposad n</p>
+                        <p class="lead">Currently i specialise in HTML, CSS and bootstrap. JavaScript and Python languages, using Django and Flask frameworks is coming soon in the next few months. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop.</p>
 
                     </div>
                 </div>
@@ -85,36 +83,37 @@
         <div class="naslov">
             <h1 class="mb-5 mt-5"> My Software skills</h1>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="progress-title">HTML</h3>
-                    <div class="progress">
-                        <div class="progress-bar" style="width:78%; background:#97c513;">
-                            <div class="progress-value">65%</div>
+       <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress" >
+                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sl-only">80% </span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
                         </div>
-                    </div>
-                    <h3 class="progress-title">CSS</h3>
-                    <div class="progress">
-                        <div class="progress-bar" style="width:60%; background:#f2545b;">
-                            <div class="progress-value">100%</div>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sl-only">70% </span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
                         </div>
-                    </div>
-                    <h3 class="progress-title">JAVASCRIPT</h3>
-                    <div class="progress">
-                        <div class="progress-bar" style="width:20%; background:#4286f4;">
-                            <div class="progress-value">75%</div>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+                                <span class="sl-only">60%</span>
+                            </div>
+                            <span class="progress-type">Bootstrap</span>
                         </div>
-                    </div>
-                    <h3 class="progress-title">BOOTSTRAP</h3>
-                    <div class="progress">
-                        <div class="progress-bar" style="width:60%; background:#21ff63;">
-                            <div class="progress-value">30%</div>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%;">
+                                <span class="sl-only">25% </span>
+                            </div>
+                            <span class="progress-type">javascript</span>
                         </div>
+                        
                     </div>
                 </div>
-            </div>
-        </div>
+</div>
+</div>
     </section>
 
     <section id="projects" class="p-5 bg-light">
